src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>LastModifiedDate  - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittersName__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniversityGoal__c</fullName>
        <description>University wide Goals</description>
        <inlineHelpText>Which University-wide goal(s) does the Idea help achieve?</inlineHelpText>
        <label>University Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Retention and Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Place to Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Satisfaction</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>YourLocation__c</fullName>
        <description>Employee work location</description>
        <inlineHelpText>Employee work location</inlineHelpText>
        <label>Your Location</label>
        <picklist>
            <picklistValues>
                <fullName>SLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ITIdeas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CATEGORIES</field>
            <operation>includes</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>IDEA.STATUS</field>
            <operation>equals</operation>
            <value>New idea,Under review</value>
        </filters>
        <label>IT Ideas</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Employee Suggestion Box: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000052TuAAI_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Salesforce Community: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000052umAAA_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Mentor SRM Stories: Idea Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>CategoryRequired</fullName>
        <active>true</active>
        <description>Make the category field mandatory</description>
        <errorConditionFormula>ISBLANK(Categories)</errorConditionFormula>
        <errorMessage>Please choose the department needed to help implement your idea.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdeaClose</fullName>
        <active>true</active>
        <description>Close Idea once its status is changed</description>
        <errorConditionFormula>IF(Closed__c = true, IsMerged = false,  IsMerged = true)</errorConditionFormula>
        <errorMessage>This idea is closed. Please read the comment thread for more information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UniversityGoalRequired</fullName>
        <active>true</active>
        <description>Make university goal field required</description>
        <errorConditionFormula>ISBLANK(UniversityGoal__c)</errorConditionFormula>
        <errorMessage>Please choose at least one university goal that your idea will support.</errorMessage>
    </validationRules>
</CustomObject>